editors/tree-sitter-pad/test/corpus/text.txt
================================================================================
Text and a field
================================================================================

<p>{$name}</p>

--------------------------------------------------------------------------------

(template
  (text)
  (field_tag
    (variable))
  (text))

================================================================================
The field sigils
================================================================================

{$a} {!b} {?c} {#d} {&e} {^f}

--------------------------------------------------------------------------------

(template
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable)))

================================================================================
Field forms: a path, a parameter, a level back, an at-reference
================================================================================

{$user.name} {$1} {$-2} {&cool:parameter:1} {$first@orders} {$<3@myRange} {$*@myRange}

--------------------------------------------------------------------------------

(template
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable))
  (field_tag
    (variable)))

================================================================================
A brace that opens no tag is text
================================================================================

{data 'x'}{"a": 1}{/data} { b } {}

--------------------------------------------------------------------------------

(template
  (block
    (open_tag
      (tag_name
        (identifier))
      (arguments
        (string)))
    (body
      (text)
      (text))
    (close_tag
      (tag_name
        (identifier))))
  (text)
  (text)
  (text))

================================================================================
Comments, and a tag inside one never counts
================================================================================

{# {if} #}
{-- {/orders} --}

--------------------------------------------------------------------------------

(template
  (comment)
  (comment))

================================================================================
Constructs
================================================================================

@page@ mail@example.com @content@

--------------------------------------------------------------------------------

(template
  (construct)
  (text)
  (text)
  (text)
  (construct))
